update protobuf dependence

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,7 @@
-{erl_opts, [debug_info]}.
+{erl_opts, [
+    debug_info,
+    {i, "./apps/game_protobuf/include/proto_dir"}
+  ]}.
 {deps, []}.
 
 {relx, [{release, { game_server, "0.1.0" },
