--- a/apps/game_protobuf/rebar.config
+++ b/apps/game_protobuf/rebar.config
@@ -4,9 +4,11 @@
 
 ]}.
 
+{deps, []}.
+
 {plugins, [
     {game_pb_msgcodegen, {git, "https://github.com/Naupio/game_pb_msgcodegen.git", {branch, "master"}}},
-    {rebar3_gpb_plugin, {git, "https://github.com/lrascao/rebar3_gpb_plugin.git", {tag, "2.2.4"}}}
+    {rebar3_gpb_plugin, {git, "https://github.com/Naupio/rebar3_gpb_plugin.git", {branch, "master"}}}
 ]}.
 
 {gpb_opts, [
@@ -27,4 +29,3 @@
         {clean, {protobuf, clean}}
         ]}
     ]}.
-{deps, []}.
