--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,9 @@
     debug_info,
     {i, "./apps/game_protobuf/include/proto_dir"}
   ]}.
-{deps, []}.
+{deps, [
+    {cowboy, {git,"https://github.com/Naupio/cowboy",{branch, "master"}}}
+]}.
 
 {relx, [{release, { game_server, "0.1.0" },
          [game_server,
