--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,10 @@
     {i, "./apps/game_protobuf/include/proto_dir"}
   ]}.
 {deps, [
-    {cowboy, {git,"https://github.com/Naupio/cowboy",{branch, "master"}}}
+    {cowboy, {git,"https://github.com/Naupio/cowboy",{branch, "master"}}},
+    {lager, {git,"https://github.com/Naupio/lager",{branch, "master"}}},
+    {np_hook, {git,"https://github.com/Naupio/np_hook",{branch, "master"}}},
+    {np_tcp, {git,"https://github.com/Naupio/np_tcp",{branch, "master"}}}
 ]}.
 
 {relx, [{release, { game_server, "0.1.0" },
