--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,7 @@
 {deps, [
     {cowboy, {git,"https://github.com/Naupio/cowboy",{branch, "master"}}},
     {lager, {git,"https://github.com/Naupio/lager",{branch, "master"}}},
+    {gproc, {git,"https://github.com/Naupio/gproc",{branch, "master"}}},
     {np_hook, {git,"https://github.com/Naupio/np_hook",{branch, "master"}}},
     {np_tcp, {git,"https://github.com/Naupio/np_tcp",{branch, "master"}}}
 ]}.
