update websocket and rebar3.config

--- a/rebar.config
+++ b/rebar.config
@@ -12,6 +12,11 @@
     {np_tcp, {git,"https://github.com/Naupio/np_tcp",{branch, "master"}}}
 ]}.
 
+{dist_node, [
+    {setcookie, 'game_server_cookie'},
+    {name, 'game_server@127.0.0.1'}
+]}.
+
 {relx, [{release, { game_server, "0.1.0" },
          [game_server,
           sasl]},
