--- a/config/sys.config
+++ b/config/sys.config
@@ -1,3 +1,21 @@
 [
-  { game_server, []}
+  { game_server, []},
+
+  {lager, [
+    {colored, true},
+    {crash_log, "log/crash.log"},
+    {crash_log_msg_size, 65536},
+    {crash_log_size, 10485760},
+    {crash_log_date, "$D0"},
+    {crash_log_count, 10},
+    {handlers, [
+      {lager_console_backend, [error,
+        {lager_default_formatter,
+          [date," ", time, color, " [",severity,"] ", pid,"@",module,":",function,":",line,"\r\n", message, "\e[0m\r\n\r\n"]}]},
+      {lager_file_backend, [{level, "=error"}, {file, "log/error.log"}, {size, 10485760}, {date, "$D0"}, {count, 10}]},
+      {lager_file_backend, [{level, "=warning"}, {file, "log/warning.log"}, {size, 10485760}, {date, "$D0"}, {count, 10}]},
+      {lager_file_backend, [{level, "=info"}, {file, "log/info.log"}, {size, 10485760}, {date, "$D0"}, {count, 10}]}
+    ]}
+  ]}
+
 ].
