--- a/rebar.config
+++ b/rebar.config
@@ -8,9 +8,7 @@
     {lager, {git,"https://github.com/Naupio/lager",{branch, "master"}}},
     {gproc, {git,"https://github.com/Naupio/gproc",{branch, "master"}}},
     {poolboy, {git,"https://github.com/Naupio/poolboy",{branch, "master"}}},
-    {jsx, {git,"https://github.com/Naupio/jsx",{branch, "master"}}},
-    {np_hook, {git,"https://github.com/Naupio/np_hook",{branch, "master"}}},
-    {np_tcp, {git,"https://github.com/Naupio/np_tcp",{branch, "master"}}}
+    {jsx, {git,"https://github.com/Naupio/jsx",{branch, "master"}}}
 ]}.
 
 {dist_node, [
