update log config

--- a/rebar.config
+++ b/rebar.config
@@ -1,11 +1,11 @@
 {erl_opts, [
     debug_info,
-    {parse_transform, lager_transform},
+    % {parse_transform, lager_transform},
     {i, "./apps/game_protobuf/include/proto_dir"}
   ]}.
 {deps, [
     {cowboy, {git,"https://github.com/Naupio/cowboy",{branch, "master"}}},
-    {lager, {git,"https://github.com/Naupio/lager",{branch, "master"}}},
+    % {lager, {git,"https://github.com/Naupio/lager",{branch, "master"}}},
     {gproc, {git,"https://github.com/Naupio/gproc",{branch, "master"}}},
     {poolboy, {git,"https://github.com/Naupio/poolboy",{branch, "master"}}},
     {jsx, {git,"https://github.com/Naupio/jsx",{branch, "master"}}}
