--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {erl_opts, [
     debug_info,
-    % {parse_transform, lager_transform},
+    {parse_transform, lager_transform},
     {i, "./apps/game_protobuf/include/proto_dir"}
   ]}.
 {deps, [
