update log system

--- a/config/sys.config
+++ b/config/sys.config
@@ -1,23 +1,33 @@
 [
-  { game_server, [
-      {websocket_port, 28821}
-      ]}
+    { game_server, [
+        {websocket_port, 28821}
+        ]},
 
-    % {lager, [
-    %     {colored, true},
-    %     {crash_log, "log/crash.log"},
-    %     {crash_log_msg_size, 65536},
-    %     {crash_log_size, 10485760},
-    %     {crash_log_date, "$D0"},
-    %     {crash_log_count, 10},
-    %     {handlers, [
-    %       {lager_console_backend, [{level, "=error"},
-    %         {lager_default_formatter,
-    %           [date," ", time, color, " [",severity,"] ", pid,"@",module,":",function,":",line,"\r\n", message, "\e[0m\r\n\r\n"]}]},
-    %       {lager_file_backend, [{level, "=error"}, {file, "log/error.log"}, {size, 10485760}, {date, "$D0"}, {count, 10}]},
-    %       {lager_file_backend, [{level, "=warning"}, {file, "log/warning.log"}, {size, 10485760}, {date, "$D0"}, {count, 10}]},
-    %       {lager_file_backend, [{level, "=info"}, {file, "log/info.log"}, {size, 10485760}, {date, "$D0"}, {count, 10}]}
-    %     ]}
-    % ]}
+    {sasl, [ 
+          {sasl_error_logger, {file, "logs"}}, 
+          {errlog_type, error}, 
+          {error_logger_mf_dir,"./mf_logs"}, 
+          {error_logger_mf_maxbytes,104857600}, % 100 MB 
+          {error_logger_mf_maxfiles, 10} 
+        ]}
+
+  % ,
+  % {lager, [
+  %   {colored, true},
+  %   {crash_log, "log/crash.log"},
+  %   {crash_log_msg_size, 65536},
+  %   {crash_log_size, 10485760},
+  %   {crash_log_date, "$D0"},
+  %   {crash_log_count, 10},
+  %   {handlers, [
+  %     {lager_console_backend, [{level, error},
+  %       {formatter, lager_default_formatter},
+  %       {formatter_config, [date," ", time, color, " [",severity,"] ", pid,"@",module,":",function,":",line,"\r\n", message, "\e[0m\r\n\r\n"]}
+  %       ]},
+  %     {lager_file_backend, [{level, error}, {file, "log/error.log"}, {size, 10485760}, {date, "$D0"}, {count, 10}]},
+  %     {lager_file_backend, [{level, warning}, {file, "log/warning.log"}, {size, 10485760}, {date, "$D0"}, {count, 10}]},
+  %     {lager_file_backend, [{level, info}, {file, "log/info.log"}, {size, 10485760}, {date, "$D0"}, {count, 10}]}
+  %   ]}
+  % ]}
 
 ].
