--- a/apps/game_protobuf/rebar.config
+++ b/apps/game_protobuf/rebar.config
@@ -7,8 +7,8 @@
 {deps, []}.
 
 {plugins, [
-    {game_pb_msgcodegen, {git, "https://github.com/Naupio/game_pb_msgcodegen.git", {branch, "master"}}},
-    {rebar3_gpb_plugin, {git, "https://github.com/Naupio/rebar3_gpb_plugin.git", {branch, "master"}}}
+    {pb_msgcodegen, {git, "https://github.com/Naupio/pb_msgcodegen", {tag, "0.1.0"}}},
+    {rebar3_gpb_plugin, {git, "https://github.com/lrascao/rebar3_gpb_plugin", {tag, "2.2.7"}}}
 ]}.
 
 {gpb_opts, [
@@ -24,7 +24,7 @@
 
 {provider_hooks,
     [{pre, [
-        {compile, game_pb_msgcodegen},
+        {compile, pb_msgcodegen},
         {compile, {protobuf, compile}},
         {clean, {protobuf, clean}}
         ]}
