--- a/rebar.config
+++ b/rebar.config
@@ -1,14 +1,23 @@
 {erl_opts, [
     debug_info,
-    {parse_transform, lager_transform},
+    % {parse_transform, lager_transform},
     {i, "./apps/game_protobuf/include/proto_dir"}
   ]}.
+
+{minimum_otp_vsn, "20.2"}.
+
+{shell, [
+    {apps, [game_server]},
+    {config, "config/sys.config"}
+]}.
+
 {deps, [
-    {cowboy, {git,"https://github.com/Naupio/cowboy",{branch, "master"}}},
-    % {lager, {git,"https://github.com/Naupio/lager",{branch, "master"}}},
-    {gproc, {git,"https://github.com/Naupio/gproc",{branch, "master"}}},
-    {poolboy, {git,"https://github.com/Naupio/poolboy",{branch, "master"}}},
-    {jsx, {git,"https://github.com/Naupio/jsx",{branch, "master"}}}
+    {cowboy, {git,"https://github.com/ninenines/cowboy",{tag, "2.4.0"}}},
+    {gproc, {git,"https://github.com/uwiger/gproc",{tag, "0.7.0"}}},
+    {poolboy, {git,"https://github.com/devinus/poolboy",{tag, "1.5.1"}}},
+    {jsx, {git,"https://github.com/talentdeficit/jsx",{tag, "2.9.0"}}},
+    % {lager, {git,"https://github.com/erlang-lager/lager",{tag, "3.6.2"}}},
+    {recen, {git,"https://github.com/ferd/recon",{tag, "2.3.5"}}}
 ]}.
 
 {dist_node, [
