--- a/config/sys.config
+++ b/config/sys.config
@@ -9,8 +9,12 @@
           {error_logger_mf_dir,"./mf_logs"}, 
           {error_logger_mf_maxbytes,104857600}, % 100 MB 
           {error_logger_mf_maxfiles, 10} 
-        ]}
+        ]},
 
+    {mnesia, [
+        {dir, "mnesia_db_data"}
+        ]
+    }
   % ,
   % {lager, [
   %   {colored, true},
