--- a/rebar.config
+++ b/rebar.config
@@ -27,18 +27,27 @@
 
 {relx, [{release, { game_server, "0.1.0" },
          [game_server,
-          sasl]},
+          sasl,
+          mnesia]},
 
         {sys_config, "./config/sys.config"},
         {vm_args, "./config/vm.args"},
 
         {dev_mode, true},
         {include_erts, false},
+        {system_libs, false},
+
+        {overlay, [
+            {mkdir, "mnesia_db_data"}
+        ]},
 
         {extended_start_script, true}]
 }.
 
 {profiles, [{prod, [{relx, [{dev_mode, false},
-                            {include_erts, true}]}]
+                            {include_src, false},
+                            {include_erts, true},
+                            {system_libs, true}
+                            ]}]
             }]
 }.
