--- a/rebar.config
+++ b/rebar.config
@@ -38,7 +38,8 @@
         {system_libs, false},
 
         {overlay, [
-            {mkdir, "mnesia_db_data"}
+            {mkdir, "mnesia_db_data"},
+            {mkdir, "mf_logs"}
         ]},
 
         {extended_start_script, true}]
