update log system to lager

--- a/config/sys.config
+++ b/config/sys.config
@@ -12,26 +12,27 @@
         ]},
 
     {mnesia, [
-        {dir, "mnesia_db_data"}
+        {dir, "mnesia_db_data"},
+        {mkdir, "mf_logs"}
         ]
-    }
-  % ,
-  % {lager, [
-  %   {colored, true},
-  %   {crash_log, "log/crash.log"},
-  %   {crash_log_msg_size, 65536},
-  %   {crash_log_size, 10485760},
-  %   {crash_log_date, "$D0"},
-  %   {crash_log_count, 10},
-  %   {handlers, [
-  %     {lager_console_backend, [{level, error},
-  %       {formatter, lager_default_formatter},
-  %       {formatter_config, [date," ", time, color, " [",severity,"] ", pid,"@",module,":",function,":",line,"\r\n", message, "\e[0m\r\n\r\n"]}
-  %       ]},
-  %     {lager_file_backend, [{level, error}, {file, "log/error.log"}, {size, 10485760}, {date, "$D0"}, {count, 10}]},
-  %     {lager_file_backend, [{level, warning}, {file, "log/warning.log"}, {size, 10485760}, {date, "$D0"}, {count, 10}]},
-  %     {lager_file_backend, [{level, info}, {file, "log/info.log"}, {size, 10485760}, {date, "$D0"}, {count, 10}]}
-  %   ]}
-  % ]}
+    },
+
+    {lager, [
+        {colored, true},
+        {crash_log, "mf_logs/crash.log"},
+        {crash_log_msg_size, 65536},
+        {crash_log_size, 10485760},
+        {crash_log_date, "$D0"},
+        {crash_log_count, 10},
+        {handlers, [
+        {lager_console_backend, [{level, error},
+            {formatter, lager_default_formatter},
+            {formatter_config, [date," ", time, color, " [",severity,"] ", pid,"@",module,":",function,":",line,"\r\n", message, "\e[0m\r\n\r\n"]}
+            ]},
+        {lager_file_backend, [{level, error}, {file, "mf_logs/error.log"}, {size, 10485760}, {date, "$D0"}, {count, 10}]},
+        {lager_file_backend, [{level, warning}, {file, "mf_logs/warning.log"}, {size, 10485760}, {date, "$D0"}, {count, 10}]},
+        {lager_file_backend, [{level, info}, {file, "mf_logs/info.log"}, {size, 10485760}, {date, "$D0"}, {count, 10}]}
+        ]}
+    ]}
 
 ].
