--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {erl_opts, [
     debug_info,
-    % {parse_transform, lager_transform},
+    {parse_transform, lager_transform},
     {i, "./apps/game_protobuf/include/proto_dir"}
   ]}.
 
@@ -16,7 +16,7 @@
     {gproc, {git,"https://github.com/uwiger/gproc",{tag, "0.7.0"}}},
     {poolboy, {git,"https://github.com/devinus/poolboy",{tag, "1.5.1"}}},
     {jsx, {git,"https://github.com/talentdeficit/jsx",{tag, "2.9.0"}}},
-    % {lager, {git,"https://github.com/erlang-lager/lager",{tag, "3.6.2"}}},
+    {lager, {git,"https://github.com/erlang-lager/lager",{tag, "3.6.3"}}},
     {recen, {git,"https://github.com/ferd/recon",{tag, "2.3.5"}}}
 ]}.
 
@@ -26,9 +26,12 @@
 ]}.
 
 {relx, [{release, { game_server, "0.1.0" },
-         [game_server,
-          sasl,
-          mnesia]},
+         [
+            sasl,
+            mnesia,
+            game_protobuf,
+            game_server
+        ]},
 
         {sys_config, "./config/sys.config"},
         {vm_args, "./config/vm.args"},
@@ -38,8 +41,7 @@
         {system_libs, false},
 
         {overlay, [
-            {mkdir, "mnesia_db_data"},
-            {mkdir, "mf_logs"}
+            {mkdir, "mnesia_db_data"}
         ]},
 
         {extended_start_script, true}]
