update log system

--- a/config/sys.config
+++ b/config/sys.config
@@ -3,13 +3,13 @@
         {websocket_port, 19910}
         ]},
 
-    {sasl, [ 
-          {sasl_error_logger, {file, "logs"}}, 
-          {errlog_type, error}, 
-          {error_logger_mf_dir,"./mf_logs"}, 
-          {error_logger_mf_maxbytes,104857600}, % 100 MB 
-          {error_logger_mf_maxfiles, 10} 
-        ]},
+    % {sasl, [ 
+    %       {sasl_error_logger, {file, "logs"}}, 
+    %       {errlog_type, error}, 
+    %       {error_logger_mf_dir,"./mf_logs"}, 
+    %       {error_logger_mf_maxbytes,104857600}, % 100 MB 
+    %       {error_logger_mf_maxfiles, 10} 
+    %     ]},
 
     {mnesia, [
         {dir, "mnesia_db_data"},
