add native profile

--- a/rebar.config
+++ b/rebar.config
@@ -47,10 +47,18 @@
         {extended_start_script, true}]
 }.
 
-{profiles, [{prod, [{relx, [{dev_mode, false},
+{profiles, [
+            {prod, [{relx, [
+                            {dev_mode, false},
                             {include_src, false},
                             {include_erts, true},
                             {system_libs, true}
-                            ]}]
-            }]
-}.
+                            ]
+                        }
+                    ]},
+            {native, [
+                    {erl_opts, [{native, o3}]}
+                ]}
+            ]
+}
+.
