update src dir for release project

--- a/rebar.config
+++ b/rebar.config
@@ -11,12 +11,14 @@
     {config, "./config/sys.config"}
 ]}.
 
+{src_dirs, ["src", "src/*"]}.
+
 {deps, [
     {cowboy, {git,"https://github.com/ninenines/cowboy",{tag, "2.5.0"}}},
     {gproc, {git,"https://github.com/uwiger/gproc",{tag, "0.8.0"}}},
     {poolboy, {git,"https://github.com/devinus/poolboy",{tag, "1.5.2"}}},
     {jsx, {git,"https://github.com/talentdeficit/jsx",{tag, "2.9.0"}}},
-    {lager, {git,"https://github.com/erlang-lager/lager",{tag, "3.6.6"}}},
+    {lager, {git,"https://github.com/erlang-lager/lager",{tag, "3.6.7"}}},
     {recen, {git,"https://github.com/ferd/recon",{tag, "2.3.6"}}}
 ]}.
 
@@ -38,7 +40,6 @@
 
         {dev_mode, true},
         {include_erts, false},
-        {system_libs, false},
 
         {overlay, [
             {mkdir, "mnesia_db_data"}
