--- a/rebar.config
+++ b/rebar.config
@@ -22,6 +22,13 @@
     {recen, {git,"https://github.com/ferd/recon",{tag, "2.3.6"}}}
 ]}.
 
+{plugins, [rebar3_appup_plugin]}.
+{provider_hooks, [
+      {pre, [{tar, {appup, tar}}]},
+      {post, [{compile, {appup, compile}},
+              {clean, {appup, clean}}]}
+  ]}.
+
 {dist_node, [
     {setcookie, 'game_server_cookie'},
     {name, 'game_server@127.0.0.1'}
