update application and license

--- a/apps/game_protobuf/rebar.config
+++ b/apps/game_protobuf/rebar.config
@@ -8,15 +8,15 @@
 
 {plugins, [
     {pb_msgcodegen, {git, "https://github.com/Naupio/pb_msgcodegen", {tag, "0.1.0"}}},
-    {rebar3_gpb_plugin, {git, "https://github.com/lrascao/rebar3_gpb_plugin", {tag, "2.6.1"}}}
+    {rebar3_gpb_plugin, {git, "https://github.com/lrascao/rebar3_gpb_plugin", {tag, "2.8.2"}}}
 ]}.
 
 {gpb_opts, [
-    {i, "priv/proto_dir"},
+    {i, "priv/"},
     {module_name_suffix, "_pb"},
     % {o, "path/to/out_dir"},    %% both .erl and .hrl are generated here
-    {o_erl, "src/proto_dir"},
-    {o_hrl, "include/proto_dir"},
+    {o_erl, "src/"},
+    {o_hrl, "include/"},
     {strings_as_binaries, true},
     type_specs,
     {packed, true}
