--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,15 @@
 {erl_opts, [
     debug_info,
-    {parse_transform, lager_transform},
-    {i, "./apps/game_protobuf/include/proto_dir"}
+    {i, "./apps/game_protobuf/include/"},
+    {i, "./apps/game_header/include/"},
+    {parse_transform, lager_transform}
   ]}.
 
-{minimum_otp_vsn, "20.2"}.
+{minimum_otp_vsn, "21.0"}.
+
+{plugins, [rebar3_hex, rebar3_appup_plugin]}.
+
+{project_plugins, [rebar3_proper]}.
 
 {shell, [
     {apps, [game_server]},
@@ -14,15 +19,14 @@
 {src_dirs, ["src", "src/*"]}.
 
 {deps, [
-    {cowboy, {git,"https://github.com/ninenines/cowboy",{tag, "2.6.1"}}},
+    {cowboy, {git,"https://github.com/ninenines/cowboy",{tag, "2.6.3"}}},
     {gproc, {git,"https://github.com/uwiger/gproc",{tag, "0.8.0"}}},
     {poolboy, {git,"https://github.com/devinus/poolboy",{tag, "1.5.2"}}},
     {jsx, {git,"https://github.com/talentdeficit/jsx",{tag, "2.9.0"}}},
-    {lager, {git,"https://github.com/erlang-lager/lager",{tag, "3.6.8"}}},
-    {recen, {git,"https://github.com/ferd/recon",{tag, "2.4.0"}}}
+    {lager, {git,"https://github.com/erlang-lager/lager",{tag, "3.6.10"}}},
+    {recen, {git,"https://github.com/ferd/recon",{tag, "2.5.0"}}}
 ]}.
 
-{plugins, [rebar3_appup_plugin]}.
 {provider_hooks, [
       {pre, [{tar, {appup, tar}}]},
       {post, [{compile, {appup, compile}},
@@ -34,11 +38,16 @@
     {name, 'game_server@127.0.0.1'}
 ]}.
 
-{relx, [{release, { game_server, "0.1.1" },
+{relx, [{release, { game_server, "0.1.0" },
          [
             sasl,
             mnesia,
+            game_header,
             game_protobuf,
+            game_web,
+            game_mnesia,
+            game_handler,
+            game_role,
             game_server
         ]},
 
@@ -66,7 +75,14 @@
                     ]},
             {native, [
                     {erl_opts, [{native, o3}]}
-                ]}
-            ]
+                ]},
+            {test, [
+                {deps, [
+                            {proper, "1.3.0"},
+                            {proper, {git, "https://github.com/proper-testing/proper.git",
+                                    {branch, "master"}}}
+                        ]}
+            ]}
+        ]
 }
 .
