--- a/config/sys.config
+++ b/config/sys.config
@@ -12,8 +12,8 @@
     %     ]},
 
     {mnesia, [
-        {dir, "mnesia_db_data"},
-        {mkdir, "mf_logs"}
+        % {mkdir, "mf_logs"},
+        {dir, "mnesia_db_data"}
         ]
     },
 
