--- a/rebar.config
+++ b/rebar.config
@@ -58,7 +58,8 @@
         {include_erts, false},
 
         {overlay, [
-            {mkdir, "mnesia_db_data"}
+            {mkdir, "mnesia_db_data"},
+            {mkdir, "mf_logs"}
         ]},
 
         {extended_start_script, true}]
