--- a/rebar.config
+++ b/rebar.config
@@ -44,10 +44,12 @@
             mnesia,
             game_header,
             game_protobuf,
-            game_web,
+            game_config,
+            game_cache,
             game_mnesia,
-            game_handler,
             game_role,
+            game_web,
+            game_handler,
             game_server
         ]},
 
