--- a/rebar.config
+++ b/rebar.config
@@ -50,6 +50,7 @@
             game_role,
             game_web,
             game_handler,
+            game_logger,
             game_server
         ]},
 
