--- a/rebar.config
+++ b/rebar.config
@@ -22,8 +22,8 @@
     {cowboy, {git,"https://github.com/ninenines/cowboy",{tag, "2.6.3"}}},
     {gproc, {git,"https://github.com/uwiger/gproc",{tag, "0.8.0"}}},
     {poolboy, {git,"https://github.com/devinus/poolboy",{tag, "1.5.2"}}},
-    {jsx, {git,"https://github.com/talentdeficit/jsx",{tag, "2.9.0"}}},
-    {lager, {git,"https://github.com/erlang-lager/lager",{tag, "3.6.10"}}},
+    {jsx, {git,"https://github.com/talentdeficit/jsx",{tag, "v2.10.0"}}},
+    {lager, {git,"https://github.com/erlang-lager/lager",{tag, "3.7.0"}}},
     {recen, {git,"https://github.com/ferd/recon",{tag, "2.5.0"}}}
 ]}.
 
@@ -38,7 +38,7 @@
     {name, 'game_server@127.0.0.1'}
 ]}.
 
-{relx, [{release, { game_server, "0.1.3" },
+{relx, [{release, { game_server, "0.1.4" },
          [
             sasl,
             mnesia,
@@ -51,6 +51,7 @@
             game_web,
             game_handler,
             game_logger,
+            game_ai,
             game_server
         ]},
 
